@@ -10,6 +10,7 @@ f9b55476def44fc7c459b2537d17dbc731e36ed5d416af7ca0b1e2e676f8aa04  dri2proto-2.8.
 847660b4df86e707c9150e33cd8c25bc5cd828f708c7418e765e3e983a2e5e93  expat-2.0.1.tar.gz
 823705472f816df21c8f6aa026dd162b280806838bb55b3432b0fb1fcca7eb86  expat-2.1.0.tar.gz
 d9e50ff2d19b3538bd2127902a89987474e1a4db8e43a66a4d1a712ab9a504ff  expat-2.2.0.tar.bz2
+d9dc32efba7e74f788fcc4f212a43216fc37cf5f23f4c2339664d473353aedf6  expat-2.2.5.tar.bz2
 216900d5c0af9017bb8f76b0ad23f0ac53cf7fc618cf04b40d989bd99b088e6a  ffmpeg-3.3.2.tar.bz2
 e72a32916ad4bbd03847f8945c55582bdbafc039d286ded7365d402a7ff164ef  fixesproto-4.1.1.tar.bz2
 ba2f3f31246bdd3f2a0acf8bd3b09ba99cab965c7fb2c2c92b7dc72870e424ce  fixesproto-5.0.tar.bz2
@@ -28,6 +29,7 @@ f3765cd4dcceb4d42d46f0d53471d7cedbad50f2112f0312c1dcc9c41eea9810  gcc-4.3.6.tar.
 09dc2276c73424bbbfda1dbddc62bbbf900c9f185acf7f3e1d773ce2d7e3cdc8  gcc-4.8.2.tar.bz2
 608df76dec2d34de6558249d8af4cbee21eceddbcb580d666f7a5a583ca3303a  gcc-5.4.0.tar.bz2
 f06ae7f3f790fbf0f018f6d40e844451e6bc3b7bc96e128e63b09825c1f8b29f  gcc-6.3.0.tar.bz2
+850bf21eafdfe5cd5f6827148184c08c4a0852a37ccf36ce69855334d2c914d4  gcc-6.4.0.tar.xz
 8a8136c235f64c6fef69cac0d73a46a1a09bb250776a050aec8f9fc880bebc17  gcc-7.1.0.tar.bz2
 f46b5944a8cabc8516673f231f466131cdfd2cdc6677dbee5d96ec7fc58a3340  gdal-1.11.1.tar.gz
 e1c1ced9c5bc8f93ef0faf0a8c7717abf784d10a7b270d2285e8e1f3b93f2bed  giflib-4.1.6.tar.bz2
@@ -189,3 +191,4 @@ cc71a391f4da8176e5daeeac1ddf5137ba5e8d2263cb93a49f9e2a9976b90899  xtrans-1.2.5.t
 1795c7d067a43174113fdf03447532f373e1c6c57c08d61d9e4e9be5e244b05e  zlib-1.2.3.tar.gz
 fa9c9c8638efb8cb8ef5e4dd5453e455751e1c530b1595eed466e1be9b7e26c5  zlib-1.2.7.tar.gz
 36658cb768a54c1d4dec43c3116c27ed893e88b02ecfcb44f2166f9c0b7f2a0d  zlib-1.2.8.tar.gz
+c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1  zlib-1.2.11.tar.gz
