@@ -3,13 +3,6 @@
 (
     cd "${PKG_SRC_DIR}/${PKG_SUBDIR_ORIG}"
 
-    PATCH_FILE="${PKG_DIR}/${PKG}-${PKG_VERSION}.patch"
-    if [ -e "${PATCH_FILE}" ]
-    then
-        LOG_FILE="${LOG_DIR}/${PKG_SUBDIR}/patch.log"
-        patch -p1 -i "${PATCH_FILE}" &> "${LOG_FILE}"
-    fi
-
     mkdir -p "mkspecs/linux-g++-${SYSTEM}"
     cp -af "mkspecs/linux-g++"/* "mkspecs/linux-g++-${SYSTEM}/"
 
