@@ -9,6 +9,8 @@
 * Use PKG_URL_2 variable for packages: openssl and libpng.
   (These projects often move tarballs into archive.)
 * Improve notifications during build of packages.
+* Simplify usage of *.patch files: apply them directly from UnpackSources()
+  function instead of forcing of usage of additional scripts (see *-patches.sh).
 * Simplify function for `make clean`: now it is just removes whole subdirectory
   "dist/" instead of alternate deleting of "dist/${CONFIG}" subdirectories.
 * Packages qtbase and freetype (optionally) depend on package harfbuzz now.
